--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-DATABASE_URL="postgresql://postgres:12345678@localhost:5432/meditrack" 
-SESSION_SECRET="Riss.Ochenya58" 
-
-
+"DATABASE_URL=postgresql://postgres:12345678@localhost:5432/meditrack" 
+"SESSION_KEY=Riss.Ochenya58" 
